--- a/L2-Lifecycle-and-Health/02-guided.yaml
+++ b/L2-Lifecycle-and-Health/02-guided.yaml
@@ -49,6 +49,8 @@ spec:
     metadata:
       labels:
         app: phoenix-gatekeeper
+    strategy:
+      type: Recreate 
     spec:
       # --- STAGE 1: THE INIT BARRIER ---
       initContainers:
