--- a/L3-Identity-and-Access/03-solution.yaml
+++ b/L3-Identity-and-Access/03-solution.yaml
@@ -66,6 +66,8 @@ metadata:
   namespace: phoenix-system-3
 spec:
   replicas: 1
+  strategy:
+    type: Recreate     
   selector:
     matchLabels:
       app: phoenix-fortress
