--- a/L3-Identity-and-Access/01-challenge.yaml
+++ b/L3-Identity-and-Access/01-challenge.yaml
@@ -11,18 +11,19 @@ metadata:
 data:
   main.py: |
     from fastapi import FastAPI
+    from kubernetes import client, config
     import os
     app = FastAPI()
     @app.get("/")
     async def root():
-        # The app tries to list pods to show 'Infrastructure Awareness'
-        # If it lacks permissions, the API returns a 403 Forbidden
-        return {
-            "status": "ONLINE",
-            "identity": os.getenv("K8S_SA", "Unknown"),
-            "api_access": "403 FORBIDDEN - Identity cannot LIST pods in namespace",
-            "fix": "Create ServiceAccount, Role, and RoleBinding to unlock."
-        }
+        try:
+            config.load_incluster_config()
+            v1 = client.CoreV1Api()
+            namespace = os.getenv("POD_NAMESPACE", "phoenix-system-3")
+            pods = v1.list_namespaced_pod(namespace=namespace)
+            return {"status": "ONLINE", "api_access": "GRANTED", "total_pods": len(pods.items)}
+        except Exception as e:
+            return {"status": "ONLINE", "api_access": "DENIED", "error": str(e)}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -43,17 +44,22 @@ spec:
     spec:
       serviceAccountName: phoenix-admin
       securityContext:
-        runAsUser: 1001
+        runAsUser: 0
         fsGroup: 2000
       containers:
       - name: phoenix-server
         image: python:3.11-slim
         workingDir: /app
         command: ["/bin/sh", "-c"]
-        args: ["pip install fastapi uvicorn && uvicorn main:app --host 0.0.0.0 --port 8000"]
+        args: ["pip install fastapi uvicorn kubernetes && uvicorn main:app --host 0.0.0.0 --port 8000"]
         resources:
           limits:
-            memory: "12Mi"
+            # ERROR 2: THE RESOURCE CHOKE (Memory too low)
+            # REASONING: Python requires significant RAM during 'pip install'. 
+            # 50Mi is insufficient for the 'kubernetes' library installation.
+            # RESULT: Pod status flips to 'OOMKilled'.
+            # FIX: Increase memory to "600Mi".
+            memory: "12Mi" 
         volumeMounts:
         - name: code-vol
           mountPath: /app
@@ -62,3 +68,17 @@ spec:
       - name: code-vol
         configMap:
           name: phoenix-app-code-v3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: phoenix-service
+  namespace: phoenix-system-3
+spec:
+  type: LoadBalancer
+  selector:
+    app: phoenix-fortress
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
