--- a/L3-Identity-and-Access/03-solution.yaml
+++ b/L3-Identity-and-Access/03-solution.yaml
@@ -4,6 +4,12 @@ metadata:
   name: phoenix-system-3
 ---
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: phoenix-admin
+  namespace: phoenix-system-3
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: phoenix-app-code-v3
@@ -11,28 +17,106 @@ metadata:
 data:
   main.py: |
     from fastapi import FastAPI
+    from kubernetes import client, config
     import os
+
     app = FastAPI()
+
     @app.get("/")
     async def root():
-        # The app now identifies itself correctly and has permission
-        return {
-            "status": "ONLINE",
-            "identity": "phoenix-admin",
-            "api_access": "GRANTED - Pod listing authorized",
-            "message": "The Fortress has been secured."
-        }
+        try:
+            config.load_incluster_config()
+            v1 = client.CoreV1Api()
+            namespace = os.getenv("POD_NAMESPACE", "phoenix-system-3")
+            pods = v1.list_namespaced_pod(namespace=namespace)
+
+            pod_list = []
+            for pod in pods.items:
+                pod_list.append({
+                    "name": pod.metadata.name,
+                    "namespace": pod.metadata.namespace,
+                    "status": pod.status.phase,
+                    "pod_ip": pod.status.pod_ip,
+                    "node": pod.spec.node_name
+                })
+
+            return {
+                "status": "ONLINE",
+                "identity": os.getenv("HOSTNAME", "Unknown"),
+                "namespace": namespace,
+                "api_access": "GRANTED",
+                "total_pods": len(pods.items),
+                "pods": pod_list
+            }
+
+        except Exception as e:
+            return {
+                "status": "ONLINE",
+                "identity": os.getenv("HOSTNAME", "Unknown"),
+                "api_access": "DENIED",
+                "error": str(e)
+            }
+
 ---
-# --- STAGE 1: IDENTITY CREATION ---
-# FIX: Created the ServiceAccount that the Deployment was looking for
-apiVersion: v1
-kind: ServiceAccount
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: phoenix-admin
+  name: phoenix-deployment
   namespace: phoenix-system-3
+spec:
+  replicas: 4
+  strategy:
+    type: Recreate     
+  selector:
+    matchLabels:
+      app: phoenix-fortress
+  template:
+    metadata:
+      labels:
+        app: phoenix-fortress
+    spec:
+      serviceAccountName: phoenix-admin
+      securityContext:
+        runAsUser: 0
+        fsGroup: 2000
+      containers:
+      - name: phoenix-server
+        image: python:3.11-slim
+        workingDir: /app
+        command: ["/bin/sh", "-c"]
+        args: ["pip install fastapi uvicorn kubernetes && uvicorn main:app --host 0.0.0.0 --port 8000"]
+        resources:
+          limits:
+            memory: "600Mi"
+        volumeMounts:
+        - name: code-vol
+          mountPath: /app
+          readOnly: true
+      volumes:
+      - name: code-vol
+        configMap:
+          name: phoenix-app-code-v3
+
 ---
-# --- STAGE 2: PERMISSION DEFINITION ---
-# FIX: Defined a Role that allows 'list' and 'get' actions on Pod resources
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: phoenix-service
+  namespace: phoenix-system-3
+spec:
+  type: LoadBalancer
+  selector:
+    app: phoenix-fortress
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+
+
+
+---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -42,6 +126,8 @@ rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"]
   verbs: ["list", "get"]
+
+
 ---
 # --- STAGE 3: THE RBAC LINK ---
 # FIX: Bound the 'pod-lister' Role to the 'phoenix-admin' ServiceAccount
@@ -57,61 +143,4 @@ subjects:
 roleRef:
   kind: Role
   name: pod-lister
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: phoenix-deployment
-  namespace: phoenix-system-3
-spec:
-  replicas: 1
-  strategy:
-    type: Recreate     
-  selector:
-    matchLabels:
-      app: phoenix-fortress
-  template:
-    metadata:
-      labels:
-        app: phoenix-fortress
-    spec:
-      serviceAccountName: phoenix-admin # Now matches the created SA above
-      
-      securityContext:
-        runAsUser: 1001
-        fsGroup: 2000
-
-      containers:
-      - name: phoenix-server
-        image: python:3.11-slim
-        workingDir: /app
-        command: ["/bin/sh", "-c"]
-        args: ["pip install fastapi uvicorn && uvicorn main:app --host 0.0.0.0 --port 8000"]
-        resources:
-          limits:
-            # FIX: Increased memory to 128Mi to prevent OOMKill during boot
-            memory: "128Mi"
-        volumeMounts:
-        - name: code-vol
-          mountPath: /app
-          # FIX: Set readOnly to false so Python can write .pyc/temp files
-          readOnly: false
-      volumes:
-      - name: code-vol
-        configMap:
-          name: phoenix-app-code-v3
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: phoenix-service
-  namespace: phoenix-system-3
-spec:
-  type: LoadBalancer
-  selector:
-    app: phoenix-fortress
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
+  apiGroup: rbac.authorization.k8s.io  
